<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/linearLayout"
    tools:context=".TestSetupActivity">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:id="@+id/tableLayout"
        android:padding="10dp">

        <TableRow
            android:id="@+id/row1"
            android:layout_width="232dp"
            android:layout_height="wrap_content"
            android:gravity="center">

            <Button
                android:layout_weight=".25"
                android:id="@+id/addHeading"
                android:text="@string/add_heading" />

            <Button
                android:layout_weight=".25"
                android:id="@+id/addQuestion"
                android:text="@string/add_question"/>
        </TableRow>

        <TableRow
            android:id="@+id/row2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center">
            <Button
                android:layout_weight=".25"
                android:id="@+id/editHeading"
                android:text="@string/edit_heading"/>

            <Button
                android:layout_weight=".25"
                android:id="@+id/editQuestion"
                android:text="@string/edit_question"/>
        </TableRow>

    </TableLayout>

    <TextView
        android:id="@+id/preview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="5dp"
        android:layout_marginStart="10dp"
        android:textSize="17sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:fontFamily="@font/andika"
        android:text="@string/preview" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" />
    </ScrollView>


</LinearLayout>