<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    android:id="@+id/linearLayout"
    tools:context=".CreateATestActivity">


    <TextView
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/andika"
        android:text="@string/name"
        android:layout_marginTop="20dp"
        android:textColor="@android:color/black"
        android:textSize="20sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/nameInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/andika"
        android:ems="20"
        android:inputType="textPersonName"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/andika"
        android:text="@string/title"
        android:layout_marginTop="20dp"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/titleInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/andika"
        android:ems="20"
        android:inputType="textPersonName"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/test_type"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/andika"
        android:text="@string/test_type"
        android:layout_marginTop="20dp"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold" />

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:entries="@array/test_type_list"
        android:prompt="@string/test_type_prompt"
        android:spinnerMode="dropdown" />

</LinearLayout>