<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    tools:context=".NewHeadingActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/andika"
        android:text="@string/title"
        android:textColor="@android:color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/nameInput"
        android:layout_width="328dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:ems="20"
        android:fontFamily="@font/andika"
        android:inputType="textMultiLine"
        android:lines="2"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/letterCount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="252dp"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/andika"
        android:text="100"
        android:textColor="@android:color/black"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/textView"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/size"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/andika"
        android:text="@string/size"
        android:textColor="@android:color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nameInput" />

    <TextView
        android:id="@+id/preview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="112dp"
        android:fontFamily="@font/andika"
        android:text="@string/preview"
        android:textColor="@android:color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nameInput" />

    <ToggleButton
        android:id="@+id/boldToggle"
        android:layout_width="56dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="176dp"
        android:layout_marginTop="8dp"
        android:textOff="B"
        android:textOn="B"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nameInput" />

    <ToggleButton
        android:id="@+id/italicToggle"
        android:layout_width="56dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textOff="I"
        android:textOn="I"
        android:textSize="20sp"
        android:textStyle="italic"
        app:layout_constraintStart_toEndOf="@+id/boldToggle"
        app:layout_constraintTop_toBottomOf="@+id/nameInput" />

    <ToggleButton
        android:id="@+id/underlineToggle"
        android:layout_width="56dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textOff="@string/underline"
        android:textOn="@string/underline"
        android:textSize="20sp"
        android:textStyle=""
        app:layout_constraintStart_toEndOf="@+id/italicToggle"
        app:layout_constraintTop_toBottomOf="@+id/nameInput" />

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="91dp"
        android:layout_height="50dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:entries="@array/font_size"
        android:prompt="@string/size"
        android:spinnerMode="dropdown"
        app:layout_constraintStart_toEndOf="@+id/size"
        app:layout_constraintTop_toBottomOf="@+id/nameInput" />
</android.support.constraint.ConstraintLayout>